[project]
name = "cppwalk"
version = "0.1.0"
description = "A C/C++ source code analysis tool powered by clang/libclang"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Herbert Shen", email = "ishbguy@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "clang>=20.1.5",
    "click>=8.2.1",
]
keywords = ["c", "cpp", "clang", "libclang", "AST", "call graph", "flow graph"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/ishbguy/cppwalk"
documentation = "https://github.com/ishbguy/cppwalk"
repository = "https://github.com/ishbguy/cppwalk"
issues = "https://github.com/ishbguy/cppwalk/issues"
changelog = "https://github.com/ishbguy/cppwalk"

[project.scripts]
cppwalk = "cppwalk:main"
cw = "cppwalk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
